--- a/src/app/Components/nosotros/nosotros.component.html
+++ b/src/app/Components/nosotros/nosotros.component.html
@@ -52,3 +52,7 @@
         <p class="text-justify pb-8 pt-8">{{"WE.PARAGRAPH" | translate}}</p>
       </div>
     </div>
+
+    
+  <app-footer></app-footer>
+  
