--- a/src/app/Components/blockchain/blockchain.component.html
+++ b/src/app/Components/blockchain/blockchain.component.html
@@ -1,5 +1,62 @@
 <app-nav></app-nav>
-    <div class="container">
+<div class="container">
+    <div class="row">
+        <div class="col-md-3 mt-16">
+            <article>
+                <h1 class="ml-9">
+                    Soluciones Blockchain    
+                </h1>
+                <hr>
+                <p> 
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Culpa quibusdam nemo maxime ipsa ab, corrupti inventore 
+                    dolore pariatur voluptates, quae mollitia quaerat tenetur 
+                    placeat distinctio illum laborum! Saepe, accusantium suscipit.
+                </p>    
+            </article>
+        </div>
+        <div class="col-md-3 mt-16">
+            <article>
+                <h1 class="ml-9">
+                    Soluciones Blockchain    
+                </h1>
+                <hr>
+                <p> 
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Culpa quibusdam nemo maxime ipsa ab, corrupti inventore 
+                    dolore pariatur voluptates, quae mollitia quaerat tenetur 
+                    placeat distinctio illum laborum! Saepe, accusantium suscipit.
+                </p>    
+            </article>
+        </div>
+        <div class="col-md-3 mt-16">
+            <article>
+                <h1 class="ml-9">
+                    Soluciones Blockchain    
+                </h1>
+                <hr>
+                <p> 
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Culpa quibusdam nemo maxime ipsa ab, corrupti inventore 
+                    dolore pariatur voluptates, quae mollitia quaerat tenetur 
+                    placeat distinctio illum laborum! Saepe, accusantium suscipit.
+                </p>
+                   
+            </article>
+        </div>
+        <div class="col-md-3 mt-16">
+            <article>
+                <h1 class="ml-9">
+                    Soluciones Blockchain    
+                </h1>
+                <hr>
+                <img src="../../../assets/img/keta.svg" class="img1 pequeño" alt="marketing exponencial">    
+            </article>
+        </div>   
+    </div>
+</div>    
+
+<!-- <div class="container">
         <div class="row justify-content-center">
             <div class="col-auto">
                 <div class="figura">
@@ -11,4 +68,4 @@
                 <img src="../../../assets/img/marcoInter.png" class="img2" alt="">
                 <p class=" pb-6 pt-6 h5 small"> {{"DEVELOPERS.PARAGRAPH" | translate}}</p>
             </div>
-        </div>
+        </div> -->
