--- a/src/app/Components/dapps/dapps.component.html
+++ b/src/app/Components/dapps/dapps.component.html
@@ -1,30 +1,47 @@
 <app-nav></app-nav>
-    <div class="container" (mouseover)="estado=true" (mouseout)="estado=false">
-        <div *ngIf="!estado" class="row justify-content-center">
-            <div class="col-auto">
-                <div class="figura">
-                    <p class="pt-6 ml-6 small">{{"DAPPS.TITLE" | translate}}</p>
-                </div>
-                <img src="../../../assets/img/dapps.svg" class="img1" alt="">
-            </div>
-            <div class="col col-md-3 ml-2 servicios-box">
-                <img src="../../../assets/img/marcoInter.png" class="img2" alt="">
-                <p class=" pb-6 pt-6 small">{{"DAPPS.PARAGRAPH" | translate}}</p>
-            </div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-3 mt-16">
+            <article>
+                <h1 class="ml-9">
+                    {{"DAPPS.TITLE" | translate}}    
+                </h1>
+                <hr>
+                <p> 
+                    {{"DAPPS.PARAGRAPH" | translate}}
+                </p>    
+            </article>
         </div>
-
-<!-- De aquí para abajo aparece la nueva parte, que se activa con el evento-->
-
-        <div *ngIf="estado" class="row justify-content-center">
-            <div class="col-auto">
-                <div class="figura">
-                    <p class="pt-6 ml-6 small">{{"DAPPS.TITLE" | translate}}</p>
-                </div>
-                <img src="../../../assets/img/dapps.svg" class="img1_v2" alt="">
-            </div>
-            <div class="offset-1 col-10 servicios-box">
-                <img src="../../../assets/img/marcoInter.png" class="img2" alt="">
-                <p class=" pb-6 pt-6 small">{{"DAPPS.PARAGRAPH" | translate}}</p>
-            </div>
+        <div class="col-md-3 mt-16">
+            <article>
+                <h1 class="ml-9">
+                    {{"DAPPS.TITLE" | translate}}    
+                </h1>
+                <hr>
+                <p> 
+                    {{"DAPPS.PARAGRAPH" | translate}}
+                </p>    
+            </article>
         </div>
+        <div class="col-md-3 mt-16">
+            <article>
+                <h1 class="ml-9">
+                    {{"DAPPS.TITLE" | translate}}    
+                </h1>
+                <hr>
+                <p>
+                    {{"DAPPS.PARAGRAPH" | translate}}
+                </p>
+            </article>
+        </div>
+        <div class="col-md-3 mt-16">
+            <article>
+                <h1 class="ml-9">
+                    {{"DAPPS.TITLE" | translate}}    
+                </h1>
+                <hr>
+                <img src="../../../assets/img/dapps.svg" class="img1 pequeño" alt="DAPPS">    
+            </article>
+        </div>   
     </div>
+</div> 
