--- a/src/app/Components/marketing/marketing.component.html
+++ b/src/app/Components/marketing/marketing.component.html
@@ -1,23 +1,66 @@
 <app-nav></app-nav>
 <div class="container">
-
-</div>    
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- <div class="container">
+    <div class="row">
+        <div class="col-md-3 mt-16">
+            <article>
+                <h1 class="ml-9">
+                    {{"MARKETING.TITLE" | translate}}    
+                </h1>
+                <hr>
+                <p> 
+                    {{"MARKETING.PARAGRAPH" | translate}}
+                </p>    
+            </article>
+        </div>
+        <div class="col-md-3 mt-16">
+            <article>
+                <h1 class="ml-9">
+                    {{"MARKETING.TITLE" | translate}}    
+                </h1>
+                <hr>
+                <p> 
+                    {{"MARKETING.PARAGRAPH-1" | translate}}
+                </p>    
+            </article>
+        </div>
+        <div class="col-md-3 mt-16">
+            <article>
+                <h1 class="ml-9">
+                    {{"MARKETING.TITLE" | translate}}    
+                </h1>
+                <hr>
+                <ul class="mt-8 ml-12">
+                    <li>
+                        {{"MARKETING.LIST" | translate}}
+                    </li>
+                    <li>
+                        {{"MARKETING.LIST-1" | translate}}
+                    </li>
+                    <li>
+                        {{"MARKETING.LIST-2" | translate}}
+                    </li>
+                    <li>
+                        {{"MARKETING.LIST-3" | translate}}
+                    </li>
+                    <li>
+                        {{"MARKETING.LIST-4" | translate}}
+                    </li>
+                </ul>
+                   
+            </article>
+        </div>
+        <div class="col-md-3 mt-16">
+            <article>
+                <h1 class="ml-9">
+                    {{"MARKETING.TITLE" | translate}}    
+                </h1>
+                <hr>
+                <img src="../../../assets/img/markExp.svg" class="img1 pequeño" alt="marketing exponencial">    
+            </article>
+        </div>   
+    </div>
+</div>
+  <!-- <div class="container">
         <div class="row justify-content-center">
             <div class="col-auto">
                 <div class="figura">
