--- a/src/app/Components/turismo/turismo.component.css
+++ b/src/app/Components/turismo/turismo.component.css
@@ -1,1 +1,27 @@
-/* Todos los estilos se encuentran en Style.css */
+middle {
+    vertical-align: middle;
+}
+
+h1 {
+    margin-bottom: 2rem;
+}
+
+p {
+    margin-top: 2rem;
+    text-align: center;
+    font-size: medium;
+}
+
+li {
+    font-size: medium;
+}
+
+h1 {
+    font-size: large;
+}
+
+.pequeño {
+    position: relative;
+    top: 2rem;
+    height: 15rem;
+}
