--- a/src/app/Components/apps/apps.component.html
+++ b/src/app/Components/apps/apps.component.html
@@ -45,6 +45,7 @@
         </div>   
     </div>
 </div>    
+<app-footer></app-footer>
 
 <!-- <div class="container">
         <div class="row justify-content-center">
