--- a/src/app/Components/arte/arte.component.html
+++ b/src/app/Components/arte/arte.component.html
@@ -45,6 +45,7 @@
         </div>   
     </div>
 </div>
+<app-footer></app-footer>
 
 <!-- 
                 <img src="../../../assets/img/marcoInter.png" class="img2" alt="">
