--- a/src/app/Components/blockchain/blockchain.component.html
+++ b/src/app/Components/blockchain/blockchain.component.html
@@ -55,6 +55,7 @@
         </div>   
     </div>
 </div>    
+<app-footer></app-footer>
 
 <!-- <div class="container">
         <div class="row justify-content-center">
