--- a/src/app/Components/marketing/marketing.component.html
+++ b/src/app/Components/marketing/marketing.component.html
@@ -60,6 +60,7 @@
         </div>   
     </div>
 </div>
+<app-footer></app-footer>
   <!-- <div class="container">
         <div class="row justify-content-center">
             <div class="col-auto">
