--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -1,66 +1,29 @@
 <!-- Footer -->
-<footer class="text-center text-lg-start text-muted container-fluid" id="color">
-  <!-- Section: Social media -->
-  <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-    <!-- Left -->
-    <div class="me-5 d-none d-lg-block">
-      <span id="alinear">Conéctate con nosotros en nuestras redes sociales:</span>
-    </div>
-    <!-- Left -->
-
-    <!-- Right -->
-    <div id="align2">
-      <a href="" class="me-4 text-reset">
-        <i class="fa fa-facebook-square"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fa fa-twitter-square"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fa fa-linkedin-square"></i>
-      </a>
-    </div>
-    <!-- Right -->
-  </section>
-  <!-- Section: Social media -->
-
+<footer>
   <!-- Section: Links  -->
   <section class="">
-    <div class="container text-center text-md-start mt-5">
+    <div class="container text-md-start mt-5">
       <!-- Grid row -->
       <div class="row mt-3">
         <!-- Grid column -->
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4" id="margen">
           <!-- Content -->
-          <h6 class="text-uppercase fw-bold mb-4">
-            Ketanolab SRL
-          </h6>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-            Aliquid expedita rem eos error voluptatibus? Ab esse, vero 
-            pariatur dolorem rem eligendi soluta quisquam ducimus 
-            placeat accusamus molestiae illo magni voluptatum?
-          </p>
+          <h6 class="text-uppercase fw-bold mb-4">Ketanolab</h6>
+          <p><i class="mr-2 fa fa-facebook fa-2x"></i>
+              <i class="mr-2 fa fa-linkedin fa-2x"></i>
+              <i class="mr-2 fa fa-twitter fa-2x"></i></p>
         </div>
         <!-- Grid column -->
 
         <!-- Grid column -->
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4" id="margen">
           <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">
-            Productos
-          </h6>
+          <h6 class="text-uppercase fw-bold mb-4">Servicios</h6>
+          <p><a href="#!" >Arte Digital NFT</a></p>
+          <p><a href="#!" >Head Hunting Developers</a></p>
+          <p><a href="#!" >Coaching Digital</a></p>
           <p>
-            <a href="#!" class="text-reset">Arte Digital NFT</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Head Hunting Developers</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Coaching Digital</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Soluciones Blockchain</a>
+            <a href="#!" >Soluciones Blockchain</a>
           </p>
         </div>
         <!-- Grid column -->
@@ -68,20 +31,15 @@
         <!-- Grid column -->
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4" id="margen">
           <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">
-            Enlaces
-          </h6>
+          <h6 class="text-uppercase fw-bold mb-4">Enlaces</h6>
           <p>
-            <a href="#!" class="text-reset">Nosotros</a>
+            <a href="#!" >Nosotros</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Nuestra Experiencia</a>
+            <a href="#!" >Nuestra Experiencia</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Aliados</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Oficina Virtual</a>
+            <a href="#!" >Oficina Virtual</a>
           </p>
         </div>
         <!-- Grid column -->
@@ -92,13 +50,14 @@
           <h6 class="text-uppercase fw-bold mb-4">
             Contacto
           </h6>
-          <p><i class="fa fa-home"></i> Dirección de Ketanolab</p>
+          <p><i class="fa fa-home"></i> Rambla Republica Peru 757, Montevideo, Uruguay</p>
           <p>
             <i class="fa fa-envelope"></i>
             contacto@ketanolab.com
           </p>
-          <p><i class="fa fa-phone"></i> Teléfono</p>
-          <p><i class="fa fa-print"></i> Fax </p>
+          <p><i class="fa fa-phone"></i> +598-92922752</p>
+          <p>© 2020 Copyright <br>Ketanolab</p>
+
         </div>
         <!-- Grid column -->
       </div>
@@ -107,10 +66,5 @@
   </section>
   <!-- Section: Links  -->
 
-  <!-- Copyright -->
-  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-    <p class="text-reset fw-bold mb-12">© 2022 Copyright: Ketanolab SRL</p>
-  </div>
-  <!-- Copyright -->
 </footer>
 <!-- Footer -->
