--- a/src/app/Components/inicio/inicio.component.html
+++ b/src/app/Components/inicio/inicio.component.html
@@ -1,10 +1,11 @@
-<app-nav></app-nav>
 <!-- Inicio container fluído -->
-    <div class="container-fluid">
+    <div class="container-fluid container-inicio">
+        <app-nav></app-nav>
+
         <!-- Inicio fila 1 -->
         <div class="row">
             <!-- Inicio columna 1 de la fila 1 -->
-            <div class="col-sm-12 col-md-6 color1" id="columna-1">
+            <div class="col-sm-12 col-md-6 color1">
                 <div class="img-container-estrategias">
                     <img class="img-inicio" src="../../assets/img/principal/3.png" alt="">
                     <a class="centered">{{"BEGINNING.TITLE-7" | translate}}</a>
@@ -16,7 +17,7 @@
                 <!-- Final satélites de estrategias -->
             </div>
             <!-- Inicio columna 2 de la fila 1 -->
-            <div class="col-sm-12 col-md-6 color2 p-5" id="columna-I">
+            <div class="col-sm-12 col-md-6 color2 p-5" >
                 <div class="img-container-blockchain">
                     <img class="img-inicio" src="../../assets/img/principal/4.png" alt="">
                     <a class="centered">{{"BEGINNING.TITLE-10" | translate}}</a>
@@ -30,7 +31,7 @@
         <!-- Inicio fila 2 -->
         <div class="row">
             <!-- Inicio columna 1 de fila 2 -->
-            <div class="col-sm-12 col-md-6 color3" id="columna-2">
+            <div class="col-sm-12 col-md-6 color3">
                 <div class="img-container-digitales">
                     <img class="img-inicio" src="../../assets/img/principal/2.png" alt="">
                     <a class="centered">{{"BEGINNING.TITLE-1" | translate}}</a>
@@ -42,7 +43,7 @@
                 <!-- FIn satélites de digitales -->
             </div>
             <!-- Inicio columa 2 de fila 2 -->
-            <div class="col-sm-12 col-md-6 color4" id="columna-II">
+            <div class="col-sm-12 col-md-6 color4">
                 <div class="img-container-metaverso">
                     <img class="img-inicio" src="../../assets/img/principal/1.png" alt="">
                     <a class="centered">{{"BEGINNING.TITLE-5" | translate}}</a>
@@ -54,3 +55,4 @@
             </div>
         </div>
     </div>
+    <app-footer></app-footer>
