--- a/src/app/Components/nav/nav.component.html
+++ b/src/app/Components/nav/nav.component.html
@@ -3,7 +3,7 @@
       <a class="navbar-brand d-lg-none" href="#">
           <!-- Creé la clase "brand-mobile" para la imagen "circulo-01.svg" para empequeñecerle en la vista móvil-->
         <img class="brand-mobile" src="../../assets/img/img/circulo-01.svg" alt="Ketanolab">
-      </a>  
+      </a>
     <button id="align-hamburguesa" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -11,11 +11,11 @@
       <div class="navbar-nav"><!--mx-auto-->
           <a class="navbar-brand d-none d-lg-block" href="#">
               <img src="../../assets/img/img/circulo-01.svg" alt="Ketanolab">
-          </a>        
+          </a>
+          <a class="nav-link_3" href="/inicio"><span class="nav-link-3"><p class="text-nav-3">Servicios</p></span></a>
           <a class="nav-link_1" href="/nosotros"><span class="nav-link-1"><p class="text-nav-1">{{"NAV.TITLE-1" | translate}}</p></span></a>
           <a class="nav-link_2" href="/experiencia"><span class="nav-link-2"><p class="text-nav-2">{{"NAV.TITLE-2" | translate}}</p></span></a>
-          <a class="nav-link_3" href="/aliados"><span class="nav-link-3"><p class="text-nav-3">{{"NAV.TITLE-3" | translate}}</p></span></a>
-          <a class="nav-link_4" href="#"><span class="nav-link-4"><p class="text-nav-4">{{"NAV.TITLE-4" | translate}}</p></span></a>
+          <a class="nav-link_4" href="https://gather.town/app/zmougmiMJ2HHVYbZ/ketanolab"><span class="nav-link-4"><p class="text-nav-4">{{"NAV.TITLE-4" | translate}}</p></span></a>
           <a class="nav-link_5" href="#"><span class="nav-link-5"><p class="text-nav-5">EN</p></span></a>
           <a class="nav-link_6" href="#"><span class="nav-link-6"><p class="text-nav-5">ES</p></span></a>
       </div>
