--- a/src/app/Components/nosotros/nosotros.component.css
+++ b/src/app/Components/nosotros/nosotros.component.css
@@ -1,15 +1,41 @@
-.card {
-    position: relative;
-    overflow: hidden;    
-    margin: 10px;
-    min-width: 230px;
-    max-width: 315px;
-    width: 10rem;
-    height: 20rem;
-    text-align: left;
-    line-height: 1.4em;
-    font-size: 16px;
-  }
+.container-nosotros {
+  background-image: url("../../../assets/img/background-3883181_1920.jpg");
+  background-size: cover;
+  position: relative;
+  height: 100vh;
+}
+
+.container-nosotros::before {
+  position: absolute;
+  content: "";
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  background-color: #00000022;
+}
+
+.quienes-somos {
+  max-width: 950px;
+  margin: auto;
+  margin-bottom: 4rem;
+  margin-top: 2rem;
+}
+
+.equipo {
+  max-width: 1030px;
+  margin: auto;
+}
+
+.tarjeta {
+  position: relative;
+  overflow: hidden;    
+  height: 400px;
+  margin-right: 1rem;
+  margin-left: 1rem;
+  background-color: transparent;
+}
+
 
   .card * {
     -webkit-box-sizing: border-box;
@@ -19,14 +45,14 @@
   }
 
   .card-img-overlay {
-    color: black;
+    color: #fff;
     position: absolute;
     top: calc(81%);
     width: 100%;
-    background-color: #ffffff;
+    background-color: #00172a;
     padding: 15px 25px 65px;
   }
-  .card-img-overlay:before {
+  .card-img-overlay::before {
     position: absolute;
     content: '';
     z-index: 2;
@@ -34,19 +60,16 @@
     left: 0;
     width: 100%;
     height: 80px;
-    background-image: -webkit-linear-gradient(top, transparent 0%, #ffffff 100%);
-    background-image: linear-gradient(to bottom, transparent 0%, #ffffff 100%);
   }
   
   .card-text {
-    margin-top: 3rem;
+    margin-top: 2rem;
   }
   .card-title {
     font-weight: bold;
     font-size: 1.4rem;
-    line-height: 1.2rem;
     text-transform: uppercase;
-    margin-left: 1.5rem;
+    font-family: "orbitron";
   }
   .card-text {
     font-size: 0.9em;
@@ -65,6 +88,14 @@
     top: 80px;  
   }
 
-  #black {
-    background-color: black;
-  }
+  .marco-ext {
+    background-repeat: no-repeat;
+    background-image: linear-gradient(#fff, #fff),
+    linear-gradient(#fff, #fff),
+    linear-gradient(#fff, #fff),
+    linear-gradient(#fff, #fff); 
+    background-size: 2px 37%, 15% 2px, 2px 38%, 15% 2px, calc(100% - 1px) calc(100% - 1px);
+    background-position: top left, left top, right bottom, right bottom, 1px 1px;
+    padding: 10px;
+    margin: 2rem 2rem;
+    }
