--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500&family=Oxygen&family=Poppins:wght@700&display=swap');
+@import '~font-awesome/css/font-awesome.css';
 
 * {
     box-sizing: border-box;
